# OpenMac

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/openmac/: bus.hpp  capi.h  cpu.hpp  debugger.hpp  hfs.hpp  machine.hpp  types.hpp
core/src/: capi.cpp  cpu.cpp  cpu_decode.cpp  cpu_ops.hpp  cpu_ops_alu.cpp  cpu_ops_flow.cpp  cpu_ops_move.cpp  cpu_ops_muldiv_bcd.cpp  cpu_ops_shift_bits.cpp  debugger.cpp
core/src/hfs/: hfsformat.cpp
core/src/machine/: adb.hpp  machine.cpp  rtc.cpp  rtc.hpp  scsi.hpp  scsiimage.hpp  via.cpp  via.hpp
gui/: .gitignore  App.xaml  App.xaml.cs  Log.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenMac.Gui.csproj  Settings.cs  WindowTheming.cs
gui/Dialogs/: CreateHardDiskDialog.xaml  CreateHardDiskDialog.xaml.cs
gui/Emulation/: AdbKeys.cs  HardDiskImage.cs  IEmulator.cs  Native.cs  NativeEmulator.cs  StubEmulator.cs  WaveAudio.cs
gui/Themes/: Emutastic.xaml
shell/: CMakeLists.txt  openmac.rc
shell/src/: main.cpp
tests/: CMakeLists.txt  fetch_sst.ps1
tests/boottrace/: main.cpp
tests/cpu_sst/: README.md  main.cpp
tests/unit/: test_cpu_reset.cpp  test_hfs.cpp  test_machine.cpp
